force-app/main/default/objects/Contact/fields/Address_Concatenation__c.field-meta.xml
<CustomField>
    <fullName>Address_Concatenation__c</fullName>
    <formula>MailingStreet  &amp;  BR() &amp; &quot;Apt &quot; &amp; Apartment_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Concatenation</label>
    <type>Text</type>
</CustomField>