force-app/main/default/objects/Contact/fields/Apartment_Number__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Number__c</fullName>
    <label>Apartment Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>