force-app/main/default/objects/Contact/fields/BCC_Address__c.field-meta.xml
<CustomField>
    <fullName>BCC_Address__c</fullName>
    <label>BCC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>