force-app/main/default/objects/Contact/fields/CC_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Address__c</fullName>
    <label>CC Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>