force-app/main/default/objects/Contact/fields/Contract_Agreement_Signed__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Agreement Signed</label>
    <type>Checkbox</type>
</CustomField>