force-app/main/default/objects/Contact/fields/Contract_Agreement_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement_Signed_Date__c</fullName>
    <label>Contract Agreement Signed Date</label>
    <type>Date</type>
</CustomField>