force-app/main/default/objects/Contact/fields/Default_Days_Survey__c.field-meta.xml
<CustomField>
    <fullName>Default_Days_Survey__c</fullName>
    <label>Default Days - Survey</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>