force-app/main/default/objects/Contact/fields/Eligibility_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Start_Date__c</fullName>
    <label>Eligibility Start Date</label>
    <type>Date</type>
</CustomField>