force-app/main/default/objects/Contact/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <externalId>true</externalId>
    <label>Employee Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>