force-app/main/default/objects/Contact/fields/Federal__c.field-meta.xml
<CustomField>
    <fullName>Federal__c</fullName>
    <label>Federal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>