force-app/main/default/objects/Contact/fields/HTML_Body__c.field-meta.xml
<CustomField>
    <fullName>HTML_Body__c</fullName>
    <label>HTML Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>