force-app/main/default/objects/Contact/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>Id</label>
    <type>TextArea</type>
</CustomField>