force-app/main/default/objects/Contact/fields/Message_date__c.field-meta.xml
<CustomField>
    <fullName>Message_date__c</fullName>
    <label>Message date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>