force-app/main/default/objects/Contact/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <type>TextArea</type>
</CustomField>