force-app/main/default/objects/Contact/fields/PEO_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>PEO_Hire_Date__c</fullName>
    <label>PEO Hire Date</label>
    <type>Date</type>
</CustomField>