force-app/main/default/objects/Contact/fields/Signed_Trion_Broker_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Signed_Trion_Broker_Agreement__c</fullName>
    <label>Signed Trion Broker Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>