force-app/main/default/objects/Contact/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <externalId>true</externalId>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>