force-app/main/default/objects/Contact/fields/Survey_Last_sent_on__c.field-meta.xml
<CustomField>
    <fullName>Survey_Last_sent_on__c</fullName>
    <label>Survey Last sent on</label>
    <type>Date</type>
</CustomField>