force-app/main/default/objects/Contact/recordTypes/Agent_Broker.recordType-meta.xml
<RecordType>
    <fullName>Agent_Broker</fullName>
    <active>true</active>
    <description>External Brokers/Agents</description>
    <label>Agent/Broker</label>
</RecordType>