force-app/main/default/objects/Contact/recordTypes/Employee.recordType-meta.xml
<RecordType>
    <fullName>Employee</fullName>
    <active>true</active>
    <description>Client Employees</description>
    <label>Employee</label>
</RecordType>