force-app/main/default/objects/Contact/validationRules/Contact_type_is_mandatory_when_survey_ON.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_type_is_mandatory_when_survey_ON</fullName>
    <active>true</active>
    <description>Contact type is mandatory when the survey switch is on</description>
    <errorConditionFormula>$Setup.Survey_Settings__c.Enable_Surveys__c &amp;&amp; ISBLANK(Contact_Type__c)</errorConditionFormula>
    <errorDisplayField>Contact_Type__c</errorDisplayField>
    <errorMessage>Contact Type is mandatory as the survey switch is ON</errorMessage>
</ValidationRule>