force-app/main/default/objects/Contact/validationRules/Default_contact_days_should_not_be_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_contact_days_should_not_be_null</fullName>
    <active>true</active>
    <description>Do not null the default contact survey days</description>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; ISCHANGED(Default_Days_Survey__c) &amp;&amp; ISBLANK(Default_Days_Survey__c) &amp;&amp;  $Setup.Survey_Settings__c.Enable_Surveys__c &amp;&amp; NOT(ISCHANGED(Contact_Type__c))</errorConditionFormula>
    <errorDisplayField>Default_Days_Survey__c</errorDisplayField>
    <errorMessage>The Default Days - Survey field cannot be null as the survey switch is ON</errorMessage>
</ValidationRule>