force-app/main/default/objects/Contact/validationRules/Require_Account_for_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Account_for_Contact</fullName>
    <active>true</active>
    <description>Cannot create a Contact without an Account</description>
    <errorConditionFormula>ISBLANK ( AccountId )</errorConditionFormula>
    <errorMessage>An Account Name is require in order to save a Contact.</errorMessage>
</ValidationRule>